Fix a bug where portfolio wouldn't scroll due to z-index position

--- a/client/src/assets/components/aboutme/Information.module.css
+++ b/client/src/assets/components/aboutme/Information.module.css
@@ -76,6 +76,7 @@
         margin: 0;
         /* max-height: 4rem; */
         align-self: auto;
+        font-size: 80%;
         /* top: -15%; */
     }
 
