--- a/client/src/assets/components/portfolio/Portfolio.module.css
+++ b/client/src/assets/components/portfolio/Portfolio.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-content: center;
     /* padding: 30% 0; */
-    /* gap: 50px; */
+    gap: 50px;
     scroll-snap-align: start;
     flex-wrap: wrap;
     /* overflow-x: scroll; */
@@ -84,9 +84,9 @@ a img {
 @media only screen and (max-width: 768px) {
 
     .carousel {
-        flex-basis: 100%;
-        height: 70vh;
-        z-index: -1;
+        flex-basis: 80%;
+        /* height: 6vh; */
+        /* z-index: -1; */
     }
 
     a img {
